230905 : mailing - sms functionalities
